--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -2,7 +2,7 @@ monitor=DP-1,2560x1440@59.951,0x0,1.0
 monitor=DP-1,transform,1
 monitor=DP-3,3840x2160@120.0,1440x193,1.0
 
-exec-once = hyprpaper & waybar
+exec-once = hyprpaper & waybar & gnome-settings-daemon & ollama serve
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -125,7 +125,7 @@ $terminal = kitty # xfce4-terminal
 $fileManager = nautilus
 $menu = rofi -show drun 
 $fullMenu = rofi -show run
-$browser = google-chrome-unstable
+$browser = qutebrowser
 
 $mainMod = SUPER
 
