--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -103,12 +103,13 @@ device:epic-mouse-v1 {
     sensitivity = -0.5
 }
 
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-windowrulev2 = nomaximizerequest, class:.* # You'll probably like this.
+# WINDOW RULES
+windowrule = float, 
+windowrule = size 1400 1100, ^(kitty)$
+windowrule = float, ^(kitty)$
+windowrule = move center, ^(kitty)$
+
+windowrulev2 = nomaximizerequest, class:.*
 
 # Binding Workspaces to monitors
 workspace = 1, monitor:DP-3
