--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -2,7 +2,7 @@ monitor=DP-1,2560x1440@59.951,0x0,1.0
 monitor=DP-1,transform,1
 monitor=DP-3,3840x2160@120.0,1440x193,1.0
 
-exec-once = hyprpaper & waybar & gnome-settings-daemon & ollama serve
+exec-once = hyprpaper & waybar & hyprctl setcursor Bibata-Modern-Classic 24 & gnome-settings-daemon & ollama serve
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -99,17 +99,17 @@ misc {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:epic-mouse-v1 {
-    sensitivity = -0.5
-}
+# device:epic-mouse-v1 {
+#     sensitivity = -0.5
+# }
 
 # WINDOW RULES
-windowrule = float, 
+windowrule = float, ^(kitty)$
 windowrule = size 1400 1100, ^(kitty)$
 windowrule = float, ^(kitty)$
 windowrule = move center, ^(kitty)$
 
-windowrulev2 = nomaximizerequest, class:.*
+# windowrulev2 = nomaximizerequest, class:.*
 
 # Binding Workspaces to monitors
 workspace = 1, monitor:DP-3
@@ -126,7 +126,7 @@ $terminal = kitty # xfce4-terminal
 $fileManager = nautilus
 $menu = rofi -show drun 
 $fullMenu = rofi -show run
-$browser = qutebrowser
+$browser = google-chrome-unstable
 
 $mainMod = SUPER
 
@@ -134,7 +134,7 @@ $mainMod = SUPER
 bind = $mainMod, return, exec, $terminal
 bind = $mainMod, Q, killactive, 
 bind = , Print, exec, grim -g "$(slurp -d)" - | wl-copy
-bind = $mainMod, L, exit, 
+# bind = $mainMod, L, exit, 
 bind = $mainMod, W, exec, $browser
 bind = $mainMod, E, exec, kitty -o window_padding_width=00 nvim
 bind = $mainMod, C, exec, $fileManager
